[package]
name = "kxxt-owo-colors"
version = "4.0.0"
rust-version = "1.56"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
documentation = "https://docs.rs/kxxt-owo-colors"
repository = "https://github.com/kxxt/owo-colors"
description = "Zero-allocation terminal colors that'll make people go owo"
license = "MIT"
readme = "README.md"
keywords = ["cli", "color", "no-std", "terminal", "ansi_term"]
categories = ["command-line-interface"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[[example]]
name = "supports_color"
required-features = ["supports-colors"]

[[example]]
name = "override"
required-features = ["supports-colors"]

[features]
supports-colors = ["supports-color"]
global-colorized-control = ["lazy_static", "supports-color"]
alloc = []

[dependencies]
cfg-if = "1.0.0"
lazy_static = { version = "1.4.0", optional = true }
supports-color = { version = "2.0", optional = true }
